<resources>
    <string name="app_name">Major Project</string>
    <string name="home">Home</string>
    <string name="power">power</string>
    <string name="all_off">All off</string>
    <string name="door_lock">Door Lock</string>
    <string name="add">Add</string>
    <string name="sign_in">Sign up</string>
    <string name="welcome">Welcome,</string>
    <string name="to_smart_easy">to Smart Easy</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_you_have_an_account">don\'t you have an account ?</string>
    <string name="sign_In">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password">Password</string>
    <string name="your_account">your account</string>
    <string name="login_to">Login to</string>
    <string name="Username">Username</string>
    <string name="new_account">new account</string>
    <string name="create_a">Create a</string>
    <string name="username_2">Username</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="sign_in_2">Sign In</string>
    <string name="email">Email</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="Sign_in_2">Sign In</string>
    <string name="already_have_an_account">already have an account ?</string>
    <string name="bedroom1">bedroom1</string>
    <string name="bed_room_1">Bed Room-1</string>
    <string name="settings">settings</string>
    <string name="bedroom2">bedroom2</string>
    <string name="bed_room_2">Bed Room-2</string>
    <string name="living_room">living_room</string>
    <string name="hall">hall</string>
    <string name="text_all_off">All Off</string>
</resources>