<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slide"
    app:layout_constraintBottom_toTopOf="@+id/button"
    app:layout_constraintTop_toTopOf="@+id/button"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:alpha="0.70"
        android:fontFamily="@font/inter_semibold"
        android:lines="2"
        android:text="welcome,\nto smart easy"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <Button
        android:id="@+id/button"
        android:layout_width="315dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.175" />

    <View
        android:id="@+id/view3"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.30"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <View
        android:id="@+id/view4"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.30"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="315dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>
